--- a/src/styles.css
+++ b/src/styles.css
@@ -11,7 +11,6 @@
     -webkit-font-smoothing: antialiased;
   }
   
-  
   dd {
     font-weight: bold;
   }
@@ -37,4 +36,18 @@
   
   .p-1 {
     padding: 1px;
+  }
+
+  .row {
+    display: flex;
+  }
+
+  .col {
+    flex-grow: 1;
+    margin-left: 10px;
+  }
+
+  input {
+    display: block;
+    margin: 5px;
   }
